--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pro4gallary",
+  "homepage":"https://jatin8870-cse.github.io/Gallary_photo/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +8,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
-    "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.18"
